Index file updated

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Test Change 2</h2>
     <h3>Another Change</h3>
     <h1>Hello Change!</h1>
+    <h1 style="font-weight: bold">Hello World!</h1>
   </body>
 </html>
